# voze_ai_coding_challenge

./: challenge.md  main.py  pyproject.toml
