[project]
name = "business-card-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mysql-connector-python>=9.1.0",
    "paddleocr>=2.9.1",
    "pip>=24.3.1",
    "setuptools>=75.6.0",
    "spacy[apple]>=3.7.5",
    "typer>=0.13.1",
    "wheel>=0.45.0",
]

# uv pip install paddlepaddle==0.0.0 -f https://www.paddlepaddle.org.cn/whl/mac/cpu/develop.html
# uv run spacy download en_core_web_trf